fix arrow align and carousel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -673,3 +673,7 @@
     color: white;
   }
 }
+
+.carousel-control-next, .carousel-control-prev {
+  top: 160px !important;
+}
